@@ -138,7 +138,7 @@ class SlurmctldCharm(CharmBase):
 
     def _on_install(self, event):
         """Perform installation operations for slurmctld."""
-        self.unit.set_workload_version(Path("VERSION").read_text().strip())
+        self.unit.set_workload_version(Path("version").read_text().strip())
 
         self.unit.status = WaitingStatus("Installing slurmctld")
 
@@ -167,7 +167,7 @@ class SlurmctldCharm(CharmBase):
 
     def _on_upgrade(self, event):
         """Perform upgrade operations."""
-        self.unit.set_workload_version(Path("VERSION").read_text().strip())
+        self.unit.set_workload_version(Path("version").read_text().strip())
 
     def _check_status(self):
         """Check for all relations and set appropriate status."""
